--- a/agape.html
+++ b/agape.html
@@ -92,6 +92,12 @@
       ul li {
         list-style-type: none;
       }
+
+      body {
+        background-image: url("assets/design/img1.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
     </style>
   </head>
   <body>
@@ -154,7 +160,7 @@
                           <div class="time_line-date_wrap">
                             <div class="seofy_hexagon">
                               <svg
-                                style="fill: #ffa705"
+                                style="fill: #eef2e6"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
                                 <path
@@ -165,7 +171,7 @@
                               <svg
                                 style="
                                   filter: drop-shadow(4px 5px 4px rgba(255, 86, 0, 0.3));
-                                  fill: #ffa705;
+                                  fill: #eef2e6;
                                 "
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
@@ -174,7 +180,11 @@
                               </svg>
                             </div>
 
-                            <h4 class="time_line-date">醞釀</h4>
+                            <h4
+                              class="time_line-date"
+                              style="color: #eef2e6">
+                              醞釀
+                            </h4>
                           </div>
                           <div class="time_line-content">
                             <h5 class="time_line-title"> 當牧師開始傳遞</h5>
@@ -222,7 +232,7 @@
                           <div class="time_line-date_wrap">
                             <div class="seofy_hexagon">
                               <svg
-                                style="fill: #ff5600"
+                                style="fill: #d6cda4"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
                                 <path
@@ -233,7 +243,7 @@
                               <svg
                                 style="
                                   filter: drop-shadow(4px 5px 4px rgba(255, 86, 0, 0.3));
-                                  fill: #ff5600;
+                                  fill: #d6cda4;
                                 "
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
@@ -241,7 +251,11 @@
                                   d="M0,58.4v79.9c0,6.5,3.5,12.6,9.2,15.8l70.5,40.2c5.6,3.2,12.4,3.2,18,0l70.5-40.2c5.7-3.2,9.2-9.3,9.2-15.8V58.4 c0-6.5-3.5-12.6-9.2-15.8L97.7,2.4c-5.6-3.2-12.4-3.2-18,0L9.2,42.5C3.5,45.8,0,51.8,0,58.4z"></path>
                               </svg>
                             </div>
-                            <h4 class="time_line-date">關於多功能空間</h4>
+                            <h4
+                              class="time_line-date"
+                              style="color: #d6cda4">
+                              關於多功能空間
+                            </h4>
                           </div>
 
                           <div class="time_line-content">
@@ -294,7 +308,7 @@
                           <div class="span1"></div>
                           <div
                             class="span5"
-                            style="padding-left: 2rem; text-align: left">
+                            style="padding-left: 2rem; text-align left">
                             半開放式的展演空間與咖啡廳樣貌，透過這個空間將教會延伸至四牆之外，接觸到更多教會外的年輕人，也能與在地有更多的連結。
                           </div>
                         </div>
@@ -525,7 +539,7 @@
                           <div class="time_line-date_wrap">
                             <div class="seofy_hexagon">
                               <svg
-                                style="fill: #69e9f2"
+                                style="fill: #3d8361"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
                                 <path
@@ -536,7 +550,7 @@
                               <svg
                                 style="
                                   filter: drop-shadow(4px 5px 4px rgba(18, 175, 254, 0.3));
-                                  fill: #69e9f2;
+                                  fill: #3d8361;
                                 "
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
@@ -544,7 +558,11 @@
                                   d="M0,58.4v79.9c0,6.5,3.5,12.6,9.2,15.8l70.5,40.2c5.6,3.2,12.4,3.2,18,0l70.5-40.2c5.7-3.2,9.2-9.3,9.2-15.8V58.4 c0-6.5-3.5-12.6-9.2-15.8L97.7,2.4c-5.6-3.2-12.4-3.2-18,0L9.2,42.5C3.5,45.8,0,51.8,0,58.4z"></path>
                               </svg>
                             </div>
-                            <h4 class="time_line-date">開幕式</h4>
+                            <h4
+                              class="time_line-date"
+                              style="color: #3d8361">
+                              開幕式
+                            </h4>
                           </div>
                           <div class="time_line-content">
                             <h5 class="time_line-title">開幕式上，牧師的分享與禱告</h5>
@@ -600,7 +618,7 @@
                           <div class="time_line-date_wrap">
                             <div class="seofy_hexagon">
                               <svg
-                                style="fill: #12affe"
+                                style="fill: #1c6758"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
                                 <path
@@ -611,7 +629,7 @@
                               <svg
                                 style="
                                   filter: drop-shadow(4px 5px 4px rgba(18, 175, 254, 0.3));
-                                  fill: #12affe;
+                                  fill: #1c6758;
                                 "
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
@@ -619,7 +637,11 @@
                                   d="M0,58.4v79.9c0,6.5,3.5,12.6,9.2,15.8l70.5,40.2c5.6,3.2,12.4,3.2,18,0l70.5-40.2c5.7-3.2,9.2-9.3,9.2-15.8V58.4 c0-6.5-3.5-12.6-9.2-15.8L97.7,2.4c-5.6-3.2-12.4-3.2-18,0L9.2,42.5C3.5,45.8,0,51.8,0,58.4z"></path>
                               </svg>
                             </div>
-                            <h4 class="time_line-date">過去兩年</h4>
+                            <h4
+                              class="time_line-date"
+                              style="color: #1c6758">
+                              過去兩年
+                            </h4>
                           </div>
                           <div class="time_line-content">
                             <h5 class="time_line-title">過去這兩年在這個空間裡<br />舉辦了：</h5>
@@ -926,7 +948,7 @@
                           <div class="time_line-date_wrap">
                             <div class="seofy_hexagon">
                               <svg
-                                style="fill: #3224e9"
+                                style="fill: #5f939a"
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
                                 <path
@@ -937,7 +959,7 @@
                               <svg
                                 style="
                                   filter: drop-shadow(4px 5px 4px rgba(50, 36, 233, 0.3));
-                                  fill: #3224e9;
+                                  fill: #5f939a;
                                 "
                                 xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 177.4 197.4">
@@ -945,7 +967,11 @@
                                   d="M0,58.4v79.9c0,6.5,3.5,12.6,9.2,15.8l70.5,40.2c5.6,3.2,12.4,3.2,18,0l70.5-40.2c5.7-3.2,9.2-9.3,9.2-15.8V58.4 c0-6.5-3.5-12.6-9.2-15.8L97.7,2.4c-5.6-3.2-12.4-3.2-18,0L9.2,42.5C3.5,45.8,0,51.8,0,58.4z"></path>
                               </svg>
                             </div>
-                            <h4 class="time_line-date">育成&amp;創業</h4>
+                            <h4
+                              class="time_line-date"
+                              style="color: #5f939a">
+                              育成&amp;創業
+                            </h4>
                           </div>
                           <div class="time_line-content">
                             <h5 class="time_line-title">人才的育成、創業的可能</h5>
