--- a/ppcCulture_11.html
+++ b/ppcCulture_11.html
@@ -99,7 +99,8 @@
 
       .about-section .content-column .text {
         position: relative;
-        color: #777777;
+        /* color: #777777; */
+        color: #c7c1c1;
         font-size: 1.5rem;
         line-height: 1.5em;
         margin-bottom: 40px;
@@ -108,7 +109,7 @@
 
       .about-section .content-column .textContent {
         position: relative;
-        color: wheat;
+        color: #00f2f6;
         text-align: center;
         font-size: 1.5rem;
         line-height: 1.5em;
@@ -127,7 +128,8 @@
         left: 40px;
         bottom: 100px;
         z-index: -1;
-        border: 2px solid #d7a449;
+        /* border: 2px solid #d7a449; */
+        border: 2px solid #417be6;
       }
 
       .sec-title2 {
@@ -139,7 +141,8 @@
       }
       .sec-title .title {
         position: relative;
-        color: #d7a449;
+        /* color: #d7a449; */
+        color: #00f2f6;
         font-size: 18px;
         font-weight: 700;
         padding-right: 50px;
@@ -156,9 +159,10 @@
         height: 1px;
         background-color: #bbbbbb;
       }
-      .contentText {
-        color: grey;
-        font-size: small;
+
+      body {
+        background-image: url("assets/design/img6.png");
+        background-size: cover;
       }
     </style>
   </head>
