--- a/song.html
+++ b/song.html
@@ -92,6 +92,12 @@
         text-decoration: none;
         color: #1ee3cf;
       }
+
+      body {
+        background-image: url("assets/design/img4.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
     </style>
   </head>
   <body>
