--- a/aboutPPC_page1.html
+++ b/aboutPPC_page1.html
@@ -81,6 +81,23 @@
         width: 50px;
         height: 50px;
       }
+
+      body {
+        background-image: url("assets/design/img5.png");
+        background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: -1;
+      }
     </style>
     <!--  -->
   </head>
@@ -119,150 +136,152 @@
         <p
           class="lead border-top pt-5 mt-5"
           data-aos="fade-up"></p>
-        <img
-          src="assets/image/ch1_1.png"
-          width="1446"
-          height="982"
-          alt="abstract image"
-          class="img-fluid position-relative shadow"
-          data-aos="fade-up"
-          data-aos-duration="2000" />
+        <div class="col-12">
+          <img
+            src="assets/design/img2.jpg"
+            alt="abstract image"
+            class="img-fluid position-relative shadow"
+            data-aos="fade-up"
+            data-aos-duration="2000" />
+        </div>
       </div>
     </div>
     <!-- END Intro -->
     <!--First row  
 	  ================================================== -->
-    <div class="row-fluid d-flex align-items-center justify-content-center">
-      <div class="span5">
-        <h2
-          class="h3 mt-5 border-top pt-3"
-          data-aos="zoom-up">
-          強本外展
-        </h2>
-        <p
-          class="text-secondary"
-          data-aos="zoom-in-up">
-          沒有強本的外展，是虛的外展！<br />
-          沒有外展的強本，是假的強本！<br />
-          因此，屏東和平教會致力於建造穩固、扎實、強盛的真理根基。<br /><br />幫助弟兄姐妹愛慕純正的道、<br />有內容、能供應生命、活出小基督、彰顯大基督。
-          <br />
-          <br />
-          而「外展檢驗強本」，當我們接受門徒訓練、裝備操練以後，也要奉差遣在各處傳揚基督、外展佈道、做主的見證人！
-        </p>
-      </div>
-      <div
-        class="span4"
-        data-aos="zoom-in-left">
-        <img
-          src="assets/image/ch1/A_109995.jpg"
-          class="img-fluid" />
-      </div>
-    </div>
-    <!-- 2rd row -->
-    <div
-      class="row-fluid d-flex align-items-start justify-content-center"
-      data-aos="fade-right">
-      <div class="span5">
-        <img
-          src="assets/image/ch1/A_108939.jpg"
-          class="img-fluid h3 mt-5" />
-      </div>
-      <div class="px-vw-1"></div>
-      <div class="span4">
-        <h2 class="h3 mt-5 border-top pt-3">虛實整合</h2>
-        <p class="text-secondary">
-          和平教會渴慕為神國開疆闢土<br />並相信虛擬世界也是一個<br />「需祢世界」—需要耶穌之處！<br /><br />
-          因此，我們在實體與線上的佈道皆不設限，每一處都是人們的革尼撒勒湖，是我們要為主得人如魚之處。
-        </p>
-      </div>
-    </div>
-    <!-- 3rd row -->
-    <div class="row-fluid d-flex align-items-center justify-content-center">
-      <div class="span5">
-        <h2
-          class="h3 mt-5 border-top pt-3"
-          data-aos="zoom-up">
-          使徒性的
-        </h2>
-        <p
-          class="text-secondary"
-          data-aos="zoom-in-up">
-          神呼召和平教會要成為「新世代使徒育成中心」，不斷裝備訓練、育成興起
-          一代又一代的新世代使徒領袖，兩三個、兩三個的把人差遣出去，走遍城市的各個地方，經營禾場，門徒萬民，直到地極！
-        </p>
-      </div>
-      <div
-        class="span4"
-        data-aos="zoom-in-left">
-        <img
-          src="assets/image/ch1/A_109537.jpg"
-          class="img-fluid" />
-      </div>
-    </div>
-    <!-- 4rd row -->
     <div class="container">
-      <div class="align-items-center justify-content-center text-center">
-        <p
-          class="lead border-top pt-3 mt-3"
-          data-aos="fade-up"></p>
-        <h2 data-aos="zoom-up">和平教會</h2>
-        <div
-          class="col-12"
-          data-aos="zoom-in-up">
-          <h2 class="lead text-secondary text-white">以P.E.A.C.E.來建造和平教會：</h2>
+      <div class="row-fluid d-flex align-items-center justify-content-center">
+        <div class="span5">
+          <h2
+            class="h3 mt-5 border-top pt-3"
+            data-aos="zoom-up">
+            強本外展
+          </h2>
+          <p
+            class="text-secondary"
+            data-aos="zoom-in-up">
+            沒有強本的外展，是虛的外展！<br />
+            沒有外展的強本，是假的強本！<br />
+            因此，屏東和平教會致力於建造穩固、扎實、強盛的真理根基。<br /><br />幫助弟兄姐妹愛慕純正的道、<br />有內容、能供應生命、活出小基督、彰顯大基督。
+            <br />
+            <br />
+            而「外展檢驗強本」，當我們接受門徒訓練、裝備操練以後，也要奉差遣在各處傳揚基督、外展佈道、做主的見證人！
+          </p>
         </div>
-        <ul
-          class="text-secondary"
-          style="font-size: larger"
-          data-aos="zoom-in-right">
-          <p class="pt-3">-Prayer & Worship-</p>
-          <p class="">經營敬拜（聚會）、成為聖殿的祭司</p>
-          <!-- row2 -->
-          <p class="pt-3">-Embrace the lost-</p>
-          <p class="">經營禾場（佈道）、成為基督的精兵</p>
-          <!-- row3 -->
-          <p class="pt-3">-Awakening-</p>
-          <p class="">經營門訓（裝備）、成為基督的門徒</p>
-          <!-- row4 -->
-          <p class="pt-3">-Connection-</p>
-          <p class="">經營團契（關係）、成為上帝的家人</p>
-          <!-- row5 -->
-          <p class="pt-3">-Emliowerment-</p>
-          <p class="">經營事工（團隊）、成為貴重的器皿</p>
-          <!--  -->
-        </ul>
+        <div
+          class="span4"
+          data-aos="zoom-in-left">
+          <img
+            src="assets/image/ch1/A_109995.jpg"
+            class="img-fluid" />
+        </div>
       </div>
-    </div>
-    <div class="align-items-center justify-content-center text-center">
-      <img
-        src="assets/image/ch1/A_100726-1.jpg"
-        class="img-polaroid"
-        alt=""
-        style="width: 270px" />
+      <!-- 2rd row -->
+      <div
+        class="row-fluid d-flex align-items-start justify-content-center"
+        data-aos="fade-right">
+        <div class="span5">
+          <img
+            src="assets/image/ch1/A_108939.jpg"
+            class="img-fluid h3 mt-5" />
+        </div>
+        <div class="px-vw-1"></div>
+        <div class="span4">
+          <h2 class="h3 mt-5 border-top pt-3">虛實整合</h2>
+          <p class="text-secondary">
+            和平教會渴慕為神國開疆闢土<br />並相信虛擬世界也是一個<br />「需祢世界」—需要耶穌之處！<br /><br />
+            因此，我們在實體與線上的佈道皆不設限，每一處都是人們的革尼撒勒湖，是我們要為主得人如魚之處。
+          </p>
+        </div>
+      </div>
+      <!-- 3rd row -->
+      <div class="row-fluid d-flex align-items-center justify-content-center">
+        <div class="span5">
+          <h2
+            class="h3 mt-5 border-top pt-3"
+            data-aos="zoom-up">
+            使徒性的
+          </h2>
+          <p
+            class="text-secondary"
+            data-aos="zoom-in-up">
+            神呼召和平教會要成為「新世代使徒育成中心」，不斷裝備訓練、育成興起
+            一代又一代的新世代使徒領袖，兩三個、兩三個的把人差遣出去，走遍城市的各個地方，經營禾場，門徒萬民，直到地極！
+          </p>
+        </div>
+        <div
+          class="span4"
+          data-aos="zoom-in-left">
+          <img
+            src="assets/image/ch1/A_109537.jpg"
+            class="img-fluid" />
+        </div>
+      </div>
+      <!-- 4rd row -->
+      <div class="container">
+        <div class="align-items-center justify-content-center text-center">
+          <p
+            class="lead border-top pt-3 mt-3"
+            data-aos="fade-up"></p>
+          <h2 data-aos="zoom-up">和平教會</h2>
+          <div
+            class="col-12"
+            data-aos="zoom-in-up">
+            <h2 class="lead text-secondary text-white">以P.E.A.C.E.來建造和平教會：</h2>
+          </div>
+          <ul
+            class="text-secondary"
+            style="font-size: larger"
+            data-aos="zoom-in-right">
+            <p class="pt-3">-Prayer & Worship-</p>
+            <p class="">經營敬拜（聚會）、成為聖殿的祭司</p>
+            <!-- row2 -->
+            <p class="pt-3">-Embrace the lost-</p>
+            <p class="">經營禾場（佈道）、成為基督的精兵</p>
+            <!-- row3 -->
+            <p class="pt-3">-Awakening-</p>
+            <p class="">經營門訓（裝備）、成為基督的門徒</p>
+            <!-- row4 -->
+            <p class="pt-3">-Connection-</p>
+            <p class="">經營團契（關係）、成為上帝的家人</p>
+            <!-- row5 -->
+            <p class="pt-3">-Emliowerment-</p>
+            <p class="">經營事工（團隊）、成為貴重的器皿</p>
+            <!--  -->
+          </ul>
+        </div>
+      </div>
+      <div class="align-items-center justify-content-center text-center">
+        <img
+          src="assets/image/ch1/A_100726-1.jpg"
+          class="img-polaroid"
+          alt=""
+          style="width: 270px" />
 
-      <img
-        src="assets/image/ch1/DSC00623.jpg"
-        class="img-polaroid"
-        style="width: 270px"
-        alt="" />
+        <img
+          src="assets/image/ch1/DSC00623.jpg"
+          class="img-polaroid"
+          style="width: 270px"
+          alt="" />
 
-      <img
-        src="assets/image/ch1/DSC06420-5.jpg"
-        class="img-polaroid"
-        style="width: 270px"
-        alt="" />
+        <img
+          src="assets/image/ch1/DSC06420-5.jpg"
+          class="img-polaroid"
+          style="width: 270px"
+          alt="" />
 
-      <img
-        src="assets/image/ch1/A_108871.jpg"
-        class="img-polaroid"
-        style="width: 270px"
-        alt="" />
+        <img
+          src="assets/image/ch1/A_108871.jpg"
+          class="img-polaroid"
+          style="width: 270px"
+          alt="" />
 
-      <img
-        src="assets/image/ch1/A_104105.jpg"
-        class="img-polaroid"
-        style="width: 270px"
-        alt="" />
+        <img
+          src="assets/image/ch1/A_104105.jpg"
+          class="img-polaroid"
+          style="width: 270px"
+          alt="" />
+      </div>
     </div>
     <!-- END Intro -->
     <div class="d-flex pt-5 align-items-center justify-content-center text-center">
