--- a/aboutPPC_page3.html
+++ b/aboutPPC_page3.html
@@ -128,7 +128,7 @@
 
       /* 設置滑鼠懸停時的顏色 */
       a:hover {
-        color: red;
+        color: #c76bee;
       }
       .wrapper_team {
         padding: 10px 0;
@@ -196,6 +196,23 @@
         display: block;
         font-size: 16px;
         letter-spacing: 1px;
+      }
+
+      body {
+        background-image: url("assets/design/img5.png");
+        background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: -1;
       }
     </style>
     <!--  -->
