--- a/ppcTenYears_3.html
+++ b/ppcTenYears_3.html
@@ -81,6 +81,23 @@
         width: 50px;
         height: 50px;
       }
+
+      body {
+        background-image: url("assets/design/img5.png");
+        background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: -1;
+      }
     </style>
     <!--  -->
   </head>
