--- a/ppcTenYears_4.html
+++ b/ppcTenYears_4.html
@@ -81,6 +81,23 @@
         width: 50px;
         height: 50px;
       }
+
+      body {
+        background-image: url("assets/design/img5.png");
+        background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: -1;
+      }
     </style>
     <!--  -->
   </head>
@@ -109,7 +126,14 @@
         <div class="col-12">
           <h1 class="display-huge mt-3 lh-1 tab-container effectTab-header">維克特的傳說營會</h1>
         </div>
-
+        <div
+          style="padding-bottom: 2rem"
+          class=" "
+          data-aos="fade-up">
+          <img
+            src="assets/design/VICTOR_005.png"
+            alt="" />
+        </div>
         <!-- Video
 			================================================== -->
         <video
