--- a/ppcTenYears_5.html
+++ b/ppcTenYears_5.html
@@ -81,6 +81,23 @@
         width: 50px;
         height: 50px;
       }
+
+      body {
+        background-image: url("assets/design/img5.png");
+        background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: -1;
+      }
     </style>
     <!--  -->
   </head>
@@ -113,7 +130,7 @@
           class="thumbnail"
           data-aos="fade-up">
           <img
-            src="assets/image/ch2.5/01.jpeg"
+            src="assets/design/img3.png"
             alt="" />
         </div>
         <div
@@ -128,7 +145,7 @@
           class="thumbnail"
           data-aos="fade-right">
           <img
-            src="assets/image/ch2.5/02.jpeg"
+            src="assets/image/ch2.5/01.jpeg"
             alt="" />
         </div>
         <!-- 2nd box-->
