--- a/ppcTenYears_8.html
+++ b/ppcTenYears_8.html
@@ -81,6 +81,23 @@
         width: 50px;
         height: 50px;
       }
+
+      body {
+        background-image: url("assets/design/img5.png");
+        background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        z-index: -1;
+      }
     </style>
     <!--  -->
   </head>
@@ -115,8 +132,8 @@
               src="assets/image/ch2.8/img_6.jpg"
               alt="img24" />
             <figcaption>
-              <h2>每日靈修</h2>
-              <p>疫情下的PPC</p>
+              <h2><br />每日靈修</h2>
+              <p></p>
               <a href="ppcTenYears_8-1.html">View more</a>
             </figcaption>
           </figure>
@@ -126,7 +143,7 @@
               alt="img20" />
             <figcaption>
               <h2>國家<br />祈禱會</h2>
-              <p>疫情下的PPC</p>
+              <p></p>
               <a href="ppcTenYears_8-2.html">View more</a>
             </figcaption>
           </figure>
@@ -135,8 +152,8 @@
               src="assets/image/ch2.8/img_12.jpeg"
               alt="img20" />
             <figcaption>
-              <h2>線上崇拜</h2>
-              <p>疫情下的PPC</p>
+              <h2><br />線上崇拜</h2>
+              <p></p>
               <a href="ppcTenYears_8-3.html">View more</a>
             </figcaption>
           </figure>
