feat:add new design frame

--- a/ppcCulture_11.html
+++ b/ppcCulture_11.html
@@ -159,6 +159,10 @@
         height: 1px;
         background-color: #bbbbbb;
       }
+      .contentText {
+        color: grey;
+        font-size: small;
+      }
 
       body {
         background-image: url("assets/design/img6.png");
