feat:new changed css

--- a/aboutPPC_page1.html
+++ b/aboutPPC_page1.html
@@ -138,7 +138,7 @@
           data-aos="fade-up"></p>
         <div class="col-12">
           <img
-            src="assets/design/img2.jpg"
+            src="assets/image/ch1_1.png"
             alt="abstract image"
             class="img-fluid position-relative shadow"
             data-aos="fade-up"
