--- a/aboutPPC_page2.html
+++ b/aboutPPC_page2.html
@@ -97,6 +97,17 @@
         background-color: rgba(0, 0, 0, 0.3);
         z-index: -1;
       }
+
+      .card {
+        display: flex;
+        align-items: center;
+        background-color: rgba(199, 107, 238, 0.5);
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+        border-radius: 0.5rem;
+        padding: 0;
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+      }
     </style>
   </head>
   <body>
@@ -156,7 +167,7 @@
               class="span6"
               data-aos="zoom-in-right">
               <h3>更小的教會</h3>
-              <div class="d-flex align-items-center bg-purple shadow rounded-5 p-0 my-5">
+              <div class="card">
                 <p class="text-secondary text-lg-start px-vw-3 py-vh-2">
                   根據《聖經》的定義，耶穌基督的Ekklesia，重點並不在於建築物，而是兩三個人奉主的名聚集，耶穌基督就應許與我們同在，兩三個人就能建立主的Ekklesia！主將得救的人加給教會，教會的人數增長，需要將焦點放在人人都要提升佈道、傳福音、領人歸主的能力和果效，
                 </p>
@@ -217,7 +228,7 @@
             </div>
             <div class="span6">
               <h3>團隊的教會</h3>
-              <div class="d-flex align-items-start bg-purple shadow rounded-5 p-0 my-5">
+              <div class="card">
                 <p class="text-secondary px-vw-3 py-vh-2 text-lg-start">
                   教會是神的軍隊，整個教會無論是小組教會或整個教會，都是基督的軍隊，軍隊的意思不光是指打仗，更是指團隊！整個教會團隊連於元首基督，將基督的身體強盛地建造起來──百節各按各職，照著各體的功用彼此相助。
                 </p>
@@ -239,7 +250,7 @@
               class="span6"
               data-aos="zoom-in-right">
               <h3>體驗的教會</h3>
-              <div class="d-flex align-items-center bg-purple shadow rounded-5 p-0 my-5">
+              <div class="card">
                 <p class="text-secondary text-lg-start px-vw-3 py-vh-2">
                   基督信仰不是一個哲學，教會不光是一個學堂，傳授知識而已，教會更是一個使人們體驗到耶穌基督之處，因為教會是基督的身體！
                 </p>
@@ -297,7 +308,7 @@
             </div>
             <div class="span6">
               <h3>多元的教會</h3>
-              <div class="d-flex align-items-start bg-purple shadow rounded-5 p-0 my-5">
+              <div class="card">
                 <p class="text-secondary px-vw-3 py-vh-2 text-lg-start">
                   和平教會有來自各個語言族群、不同國籍、年齡層的人，不是「單一文化」的教會，而是「多元文化」的教會！
                 </p>
@@ -321,7 +332,7 @@
               class="span6"
               data-aos="zoom-in-right">
               <h3>未來的教會</h3>
-              <div class="d-flex align-items-center bg-purple shadow rounded-5 p-0 my-5">
+              <div class="card">
                 <p class="text-secondary text-lg-start px-vw-3 py-vh-2">
                   「和平教會2.0」是一個著眼於「未來的教會」建造！世界正在與時俱進，5G、AI、元宇宙的發展正在改變未來世界，
                   隨著世界局勢的變化，我們要更加著眼於未來！以「五新（新媒體、新創藝、新科技、新創業、新教育）」來幫助年輕人面對未來。
