--- a/ppcCulture.html
+++ b/ppcCulture.html
@@ -87,7 +87,7 @@
         background-size: cover;
       }
 
-      /* body::before {
+      body::before {
         content: "";
         display: block;
         position: fixed;
@@ -97,7 +97,7 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         z-index: -1;
-      } */
+      }
     </style>
     <!--  -->
   </head>
@@ -129,7 +129,7 @@
               data-aos="zoom-in-up"
               class="wrapper"
               align="center">
-              <h1 class="ti title text-white">三、PPC與文化</h1>
+              <h1 class="ti title text-white">PPC與文化</h1>
             </div>
             <div class="column-12 tab column-xs-12">
               <div class="custom-row">
