--- a/ppcTenYears.html
+++ b/ppcTenYears.html
@@ -129,7 +129,7 @@
               data-aos="zoom-in-up"
               class="wrapper"
               align="center">
-              <h1 class="ti title text-white">二、2012-2022關鍵十年</h1>
+              <h1 class="ti title text-white">2012-2022關鍵十年</h1>
             </div>
             <div class="column-xs-12 column-md-12 column-sm-12 tab">
               <div class="custom-row">
