--- a/song.html
+++ b/song.html
@@ -98,6 +98,13 @@
         background-size: cover;
         background-repeat: no-repeat;
       }
+
+      .textColor {
+        color: white;
+        /* -webkit-text-stroke: 1px black; */
+        -webkit-text-fill-color: white;
+        text-shadow: 0px 0px 5px black;
+      }
     </style>
   </head>
   <body>
@@ -129,7 +136,7 @@
             <div class="bordered"></div>
             <!-- Left Image
             ================================================== -->
-            <p>
+            <p class="textColor">
               <img
                 src="assets/image/ch6/img_1.JPG"
                 class="pull-left paddingright"
@@ -147,7 +154,7 @@
             <div class="bordered"></div>
             <!-- Right Image
             ================================================== -->
-            <p>
+            <p class="textColor">
               <img
                 src="assets/image/ch6/img_2.jpg"
                 class="pull-right paddingleft"
