--- a/agape.html
+++ b/agape.html
@@ -96,7 +96,21 @@
       body {
         background-image: url("assets/design/img1.png");
         background-size: contain;
-        background-repeat: no-repeat;
+
+        /* background-repeat: no-repeat; */
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.75);
+        z-index: -1;
+        /* filter: blur(5px); */
       }
     </style>
   </head>
