--- a/ppcCulture_3.html
+++ b/ppcCulture_3.html
@@ -164,6 +164,18 @@
         background-image: url("assets/design/img6.png");
         background-size: cover;
       }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: -1;
+      }
     </style>
   </head>
   <body>
