--- a/ppcCulture_6.html
+++ b/ppcCulture_6.html
@@ -53,7 +53,7 @@
     <link
       rel="stylesheet"
       href="css/theme.min.css" />
-
+    <link rel="stylesheet href=
     <!-- Jquery - The rest of the scripts at the bottom-->
     <script src="js/jquery-1.9.0.min.js"></script>
     <!-- Loading Animation CSS -->
@@ -163,6 +163,18 @@
       body {
         background-image: url("assets/design/img6.png");
         background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: -1;
       }
     </style>
   </head>
