--- a/ppcCulture_7.html
+++ b/ppcCulture_7.html
@@ -159,10 +159,21 @@
         height: 1px;
         background-color: #bbbbbb;
       }
-
       body {
         background-image: url("assets/design/img6.png");
         background-size: cover;
+      }
+
+      body::before {
+        content: "";
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: -1;
       }
     </style>
   </head>
