feat:new changed css

--- a/ppcTenYears_3.html
+++ b/ppcTenYears_3.html
@@ -176,35 +176,35 @@
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">夢夢基地</p>
+              <!-- <p style="color: palevioletred">夢夢基地</p> -->
               <img
                 src="assets/image/logo/Dream_001.png"
                 alt="image" />
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>3-6歲的學齡前幼童</span></div>
+              <div class="testimonial-name"><br /><span>夢夢基地 | 3-6歲的學齡前幼童</span></div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">思麥特基地</p>
+              <!-- <p style="color: palevioletred">思麥特基地</p> -->
               <img
                 src="assets/image/logo/SMK_001.png"
                 alt="image" />
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>7-12歲的國小兒童</span></div>
+              <div class="testimonial-name"><br /><span>思麥特基地 | 7-12歲的國小兒童</span></div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">好家親子丼</p>
+              <!-- <p style="color: palevioletred">好家親子丼</p> -->
               <img
                 style="width: 75%"
                 src="assets/image/logo/family_001.png"
@@ -212,14 +212,14 @@
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>家庭與親子</span></div>
+              <div class="testimonial-name"><br /><span>好家親子丼 | 家庭與親子</span></div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">Youth Quake<br />杰尼兒事務所</p>
+              <!-- <p style="color: palevioletred">Youth Quake<br />杰尼兒事務所</p> -->
               <img
                 style="width: 50%"
                 src="assets/image/logo/Junior_001.png"
@@ -227,14 +227,16 @@
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>國中生</span></div>
+              <div class="testimonial-name">
+                <br /><span>Youth Quake 杰尼兒事務所 | 國中生</span>
+              </div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">Youth Quake<br />希尼爾事務所</p>
+              <!-- <p style="color: palevioletred">Youth Quake<br />希尼爾事務所</p> -->
               <img
                 style="width: 50%"
                 src="assets/image/logo/Senior_001.png"
@@ -242,63 +244,65 @@
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>高中生</span></div>
+              <div class="testimonial-name">
+                <br /><span>Youth Quake 希尼爾事務所 | 高中生</span>
+              </div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">大大集散地</p>
+              <!-- <p style="color: palevioletred">大大集散地</p> -->
               <img
                 src="assets/image/logo/DaDa_001.png"
                 alt="image" />
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>大專生、研究生</span></div>
+              <div class="testimonial-name"><br /><span>大大集散地 | 大專生、研究生</span></div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">i Work愛窩客</p>
+              <!-- <p style="color: palevioletred">i Work愛窩客</p> -->
               <img
                 src="assets/image/logo/iWork_001.png"
                 alt="image" />
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>職場青年</span></div>
+              <div class="testimonial-name"><br /><span>i Work愛窩客 | 職場青年</span></div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">社工共乘</p>
+              <!-- <p style="color: palevioletred">社工共乘</p> -->
               <img
                 src="assets/image/logo/SW_001.png"
                 alt="image" />
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>社會工作者</span></div>
+              <div class="testimonial-name"><br /><span>社工共乘 | 社會工作者</span></div>
             </div>
           </div>
           <div
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">ICU<br />（I Care You）</p>
+              <!-- <p style="color: palevioletred">ICU<br />（I Care You）</p> -->
               <img
                 src="assets/image/logo/ICU_001.png"
                 alt="image" />
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>從事醫護工作者</span></div>
+              <div class="testimonial-name"><br /><span>ICU | 從事醫護工作者</span></div>
             </div>
           </div>
 
@@ -306,7 +310,7 @@
             class="boxportfolio4"
             data-aos="zoom-in-up">
             <div class="testimonial">
-              <p style="color: palevioletred">老神在在</p>
+              <!-- <p style="color: palevioletred">老神在在</p> -->
 
               <img
                 style="width: 50%"
@@ -315,7 +319,7 @@
             </div>
             <div class="author-wrapper">
               <div class="arrow"></div>
-              <div class="testimonial-name"><br /><span>銀髮族</span></div>
+              <div class="testimonial-name"><br /><span>老神在在 | 銀髮族</span></div>
             </div>
           </div>
         </div>
